# med_assistant_rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_DEPLOY.md  architecture_overview.md  docker-compose.yml  ingest.py  main.py  performance_logs.txt  pyproject.toml  requirements.txt  requirements_docker.txt  screening_responses.md  test_api.py  test_output.txt  test_res.txt  ui.py
app/: model.py  rag.py  schema.py
frontend/: .dockerignore  .vercelignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: AboutPage.tsx  AuthPage.css  CliniciansPage.tsx  IntegrationsPage.tsx  LandingFooter.tsx  LandingNav.tsx  LandingPage.css  LandingPage.tsx  LoginPage.tsx  MarkdownAnswer.tsx  MarketingLayout.tsx  MarketingPage.css  ModelMetricsDrawer.tsx  PartnersPage.tsx  ProtectedRoute.tsx  SignupPage.tsx  landingLinks.ts
frontend/src/context/: AuthContext.tsx
k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  namespace.yaml  pvc.yaml
src/med_assistant/api/: auth.py  deps.py  main.py  middleware.py
src/med_assistant/core/: config.py  observability.py
src/med_assistant/db/: database.py
src/med_assistant/models/: schemas.py  user.py
src/med_assistant/services/: auth_service.py  evaluation_service.py  ingestion_service.py  llm_service.py  rag_service.py
src/med_assistant/ui/: app.py
tests/: conftest.py  demo_sample_queries.py  test_api.py  test_auth.py  test_evaluation_service.py  test_ingest.py  test_observability.py  test_rag_pipeline.py  test_rag_service.py
tests/fixtures/: medical_samples.py  rag_test_utils.py
