[project]
name = "med-assistant-rag"
version = "0.1.0"
description = "A powerful RAG system for medical documents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "torch>=2.0.0",
    "transformers",
    "accelerate",
    "einops",
    "langchain==0.3.13",
    "langchain-community==0.3.13",
    "langchain-huggingface>=0.0.1",
    "langchain-chroma>=0.1.0",
    "xformers",
    "bitsandbytes",
    "sentence-transformers",
    "chromadb",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "ragas>=0.4.3",
    "datasets>=4.8.4",
    "rank-bm25>=0.2.2",
    "sqlalchemy>=2.0.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "pytest-asyncio>=0.21.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/med_assistant"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
